--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,8 @@ dependencies {
 
     compile "com.makeramen:roundedimageview:$rootProject.roundedimageviewVersion"
 
+    compile "com.google.guava:guava:$rootProject.guavaVersion"
+
     // Dependencies for local unit tests
     testCompile "junit:junit:$rootProject.junitVersion"
     testCompile "org.mockito:mockito-all:$rootProject.mockitoVersion"
@@ -135,6 +137,8 @@ dependencies {
     })
     androidTestCompile "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion"
     androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"
+    compile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.espressoVersion"
+
 
     // UI testing with UI Automator
 //    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
