--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofit2Version"
     compile "com.squareup.retrofit2:adapter-rxjava:$rootProject.retrofit2Version"
     compile "com.squareup.okhttp3:okhttp:$rootProject.okhttp3Version"
+    compile "com.squareup.okhttp3:mockwebserver:$rootProject.okhttp3Version"
     compile "com.squareup.okhttp3:okhttp-urlconnection:$rootProject.okhttp3Version"
     compile "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3Version"
     debugCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakcanaryVersion"
