--- a/build.gradle
+++ b/build.gradle
@@ -33,29 +33,28 @@ ext {
 
     // App dependencies
     supportLibraryVersion = '25.1.1'
-    guavaVersion = '18.0'
     picassoVersion = '2.5.2'
-    retrofit2Version = '2.1.0'
+    retrofit2Version = '2.2.0'
     okhttp3Version = '3.6.0'
     leakcanaryVersion = '1.5'
     circleimageviewVersion = '2.1.0'
-    butterknifeVersion = '8.4.0'
-    timberVersion = '4.4.0'
+    butterknifeVersion = '8.5.1'
+    timberVersion = '4.5.1'
     recyclerviewAnimatorsVersion = '2.0.0'
     trestleVersion = '0.0.7'
     multidexVersion = '1.0.1'
-    rxjavaVersion = '1.1.8'
-    rxandroidVersion = '1.2.1'
-    rxbindingVersion = '1.0.0'
+    rxjavaVersion = '1.1.8' //
+    rxandroidVersion = '1.2.1' //
+    rxbindingVersion = '1.0.1'
     roundedimageviewVersion = '2.3.0'
 
     // Test dependencies
     junitVersion = '4.12'
-    mockitoVersion = '1.10.19'
-    powerMockito = '1.6.2'
+    mockitoVersion = '2.0.2-beta'
+    powerMockito = '1.6.6'
     hamcrestVersion = '1.3'
     runnerVersion = '0.5'
     rulesVersion = '0.5'
     espressoVersion = '2.2.2'
-    supportAnnotations = '24.0.0'
+    supportAnnotations = '24.2.0'
 }
