--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,9 @@ ext {
     trestleVersion = '0.0.7'
     multidexVersion = '1.0.1'
     rxjavaVersion = '1.1.8' //
+    rxjava2Version = '2.0.1' //
     rxandroidVersion = '1.2.1' //
+    rxjava2RxandroidVersion = '2.0.1' //
     rxbindingVersion = '1.0.1'
     roundedimageviewVersion = '2.3.0'
 
