--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'io.realm:realm-gradle-plugin:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.4.0-alpha7'
+        classpath 'io.realm:realm-gradle-plugin:3.1.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
