--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
     }
 }
 
@@ -30,12 +33,12 @@ task clean(type: Delete) {
 ext {
     // Sdk and tools
     minSdkVersion = 21
-    targetSdkVersion = 25
-    compileSdkVersion = 25
-    buildToolsVersion = '25.0.0'
+    targetSdkVersion = 26
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.0'
 
     // App dependencies
-    supportLibraryVersion = '25.1.1'
+    supportLibraryVersion = '26.0.0-beta2'
     picassoVersion = '2.5.2'
     retrofit2Version = '2.2.0'
     okhttp3Version = '3.6.0'
