--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-alpha01'
-        classpath 'io.realm:realm-gradle-plugin:3.1.4'
+        classpath 'io.realm:realm-gradle-plugin:4.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,17 +38,17 @@ ext {
     buildToolsVersion = '26.0.0'
 
     // App dependencies
-    supportLibraryVersion = '26.0.0-beta2'
+    supportLibraryVersion = '27.0.0'
     picassoVersion = '2.5.2'
     retrofit2Version = '2.2.0'
     okhttp3Version = '3.6.0'
-    leakcanaryVersion = '1.5'
+    leakcanaryVersion = '1.5.4'
     circleimageviewVersion = '2.1.0'
-    butterknifeVersion = '8.5.1'
+    butterknifeVersion = '8.8.1'
     timberVersion = '4.5.1'
     recyclerviewAnimatorsVersion = '2.0.0'
     trestleVersion = '0.0.7'
-    multidexVersion = '1.0.1'
+    multidexVersion = '1.0.2'
     rxjavaVersion = '1.1.8' //
     rxjava2Version = '2.0.1' //
     rxandroidVersion = '1.2.1' //
@@ -63,6 +63,6 @@ ext {
     hamcrestVersion = '1.3'
     runnerVersion = '0.5'
     rulesVersion = '0.5'
-    espressoVersion = '2.2.2'
+    espressoVersion = '3.0.1'
     supportAnnotations = '24.2.0'
 }
