--- a/build.gradle
+++ b/build.gradle
@@ -40,29 +40,28 @@ ext {
     // App dependencies
     supportLibraryVersion = '27.0.0'
     picassoVersion = '2.5.2'
-    retrofit2Version = '2.2.0'
-    okhttp3Version = '3.6.0'
+    retrofit2Version = '2.3.0'
+    okhttp3Version = '3.9.0'
     leakcanaryVersion = '1.5.4'
-    circleimageviewVersion = '2.1.0'
     butterknifeVersion = '8.8.1'
     timberVersion = '4.5.1'
     recyclerviewAnimatorsVersion = '2.0.0'
     trestleVersion = '0.0.7'
     multidexVersion = '1.0.2'
+    // Need to update these next
     rxjavaVersion = '1.1.8' //
     rxjava2Version = '2.0.1' //
     rxandroidVersion = '1.2.1' //
     rxjava2RxandroidVersion = '2.0.1' //
     rxbindingVersion = '1.0.1'
-    roundedimageviewVersion = '2.3.0'
 
     // Test dependencies
     junitVersion = '4.12'
     mockitoVersion = '2.0.2-beta'
     powerMockito = '1.6.6'
     hamcrestVersion = '1.3'
-    runnerVersion = '0.5'
-    rulesVersion = '0.5'
+    runnerVersion = '1.0.1'
+    rulesVersion = '1.0.1'
     espressoVersion = '3.0.1'
     supportAnnotations = '24.2.0'
 }
