--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,68 +70,69 @@ android {
  all versions in a single place. This improves readability and helps managing project complexity.
  */
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile "com.squareup.picasso:picasso:$rootProject.picassoVersion"
-    compile "com.squareup.retrofit2:retrofit:$rootProject.retrofit2Version"
-    compile "com.squareup.retrofit2:converter-gson:$rootProject.retrofit2Version"
-    compile "com.squareup.retrofit2:adapter-rxjava:$rootProject.retrofit2Version"
-    compile "com.squareup.okhttp3:okhttp:$rootProject.okhttp3Version"
-    compile "com.squareup.okhttp3:mockwebserver:$rootProject.okhttp3Version"
-    compile "com.squareup.okhttp3:okhttp-urlconnection:$rootProject.okhttp3Version"
-    compile "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3Version"
-    debugCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakcanaryVersion"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakcanaryVersion"
+    implementation "com.squareup.picasso:picasso:$rootProject.picassoVersion"
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit2Version"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit2Version"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$rootProject.retrofit2Version"
+    implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttp3Version"
+    implementation "com.squareup.okhttp3:mockwebserver:$rootProject.okhttp3Version"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:$rootProject.okhttp3Version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttp3Version"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakcanaryVersion"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakcanaryVersion"
 
-    compile "com.android.support:design:$rootProject.supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:palette-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
-    compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:palette-v7:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
 
-    compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+    implementation "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
 //    apt 'com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion'
-    compile "com.jakewharton.timber:timber:$rootProject.timberVersion"
+    implementation "com.jakewharton.timber:timber:$rootProject.timberVersion"
 
-    compile "jp.wasabeef:recyclerview-animators:$rootProject.recyclerviewAnimatorsVersion" // Stable
+    implementation "jp.wasabeef:recyclerview-animators:$rootProject.recyclerviewAnimatorsVersion" // Stable
 
-    compile "com.github.lawloretienne:trestle:$rootProject.trestleVersion"
+    implementation "com.github.lawloretienne:trestle:$rootProject.trestleVersion"
 
-    compile "com.android.support:multidex:$rootProject.multidexVersion" //
+    implementation "com.android.support:multidex:$rootProject.multidexVersion" //
 
-    compile "io.reactivex:rxjava:$rootProject.rxjavaVersion" // RxJava // Should update at some point
-    compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjava2Version" // RxJava // Should update at some point
-    compile "io.reactivex:rxandroid:$rootProject.rxandroidVersion" // RxAndroid providing Android Scheduler // Should update at some point
-    compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxjava2RxandroidVersion" // RxAndroid providing Android Scheduler // Should update at some point
-    compile "com.jakewharton.rxbinding:rxbinding:$rootProject.rxbindingVersion" // RxBinding
+    implementation "io.reactivex:rxjava:$rootProject.rxjavaVersion" // RxJava // Should update at some point
+    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxjava2Version" // RxJava // Should update at some point
+    implementation "io.reactivex:rxandroid:$rootProject.rxandroidVersion" // RxAndroid providing Android Scheduler // Should update at some point
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxjava2RxandroidVersion" // RxAndroid providing Android Scheduler // Should update at some point
+    implementation "com.jakewharton.rxbinding:rxbinding:$rootProject.rxbindingVersion" // RxBinding
+    implementation "com.jakewharton.rxbinding2:rxbinding:$rootProject.rxbinding2Version" // RxBinding2 only supports RxJava2
 
     // Dependencies for local unit tests
-    testCompile "junit:junit:$rootProject.junitVersion"
-    testCompile "org.mockito:mockito-all:$rootProject.mockitoVersion"
-    testCompile "org.hamcrest:hamcrest-all:$rootProject.hamcrestVersion"
-    testCompile "org.powermock:powermock-module-junit4:$rootProject.powerMockito"
-    testCompile "org.powermock:powermock-api-mockito:$rootProject.powerMockito"
+    testImplementation "junit:junit:$rootProject.junitVersion"
+    testImplementation "org.mockito:mockito-all:$rootProject.mockitoVersion"
+    testImplementation "org.hamcrest:hamcrest-all:$rootProject.hamcrestVersion"
+    testImplementation "org.powermock:powermock-module-junit4:$rootProject.powerMockito"
+    testImplementation "org.powermock:powermock-api-mockito:$rootProject.powerMockito"
 
     // Required for instrumented tests
-    androidTestCompile "com.android.support:support-annotations:$rootProject.supportAnnotations"
+    androidTestImplementation "com.android.support:support-annotations:$rootProject.supportAnnotations"
 
     // Android Testing Support Library's runner and rules
-    androidTestCompile "com.android.support.test:runner:$rootProject.runnerVersion"
-    androidTestCompile "com.android.support.test:rules:$rootProject.rulesVersion"
+    androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
+    androidTestImplementation "com.android.support.test:rules:$rootProject.rulesVersion"
 
     // Espresso UI Testing dependencies.
 //    androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
-    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion", {
+    androidTestImplementation("com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion"
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"
-    compile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.espressoVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"
+    implementation "com.android.support.test.espresso:espresso-idling-resource:$rootProject.espressoVersion"
 
 
     // UI testing with UI Automator
-//    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+//    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 }
 
 /*
@@ -148,9 +149,9 @@ excluded from the test APK! This is necessary because both APKs will contain the
 excluding these dependencies from your test configuration will result in an dex pre-verifier error
 at runtime. More info in this tools bug: (https://code.google.com/p/android/issues/detail?id=192497)
 */
-configurations.compile.dependencies.each { compileDependency ->
-    println "Excluding compile dependency: ${compileDependency.getName()}"
-    configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
-        configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
+configurations.implementation.dependencies.all { implementationDependency ->
+    println "Excluding implementation dependency: ${implementationDependency.getName()}"
+    configurations.androidTestImplementation.dependencies.all { androidTestImplementationDependency ->
+        configurations.androidTestImplementation.exclude module: "${implementationDependency.getName()}"
     }
 }
