--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,25 +67,26 @@ android {
 // Define versions in a single place
 ext {
     // App dependencies
-    supportLibraryVersion = '27.0.0'
+    supportLibraryVersion = '27.0.2'
     picassoVersion = '2.5.2'
     retrofit2Version = '2.3.0'
-    okhttp3Version = '3.9.0'
+    okhttp3Version = '3.9.1'
     leakcanaryVersion = '1.5.4'
     butterknifeVersion = '8.8.1'
-    timberVersion = '4.5.1'
-    recyclerviewAnimatorsVersion = '2.0.0'
-    trestleVersion = '0.0.7'
+    timberVersion = '4.6.0'
+    recyclerviewAnimatorsVersion = '2.0.0' // Update at some point
+    trestleVersion = '0.0.8'
     multidexVersion = '1.0.2'
-    rxjava2Version = '2.1.7' //
-    rxjava2RxandroidVersion = '2.0.1' //
-    rxbindingVersion = '1.0.1'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    rxjava2RxandroidVersion = '2.0.1'
+    rxjava2Version = '2.1.7'
     rxbinding2Version = '2.0.0'
 
     // Test dependencies
     junitVersion = '4.12'
-    mockitoVersion = '2.0.2-beta'
-    powerMockito = '1.6.6'
+    mockitoVersion = '2.0.2-beta' // Update at some point
+    powerMockVersion = '1.7.3'
     hamcrestVersion = '1.3'
     runnerVersion = '1.0.1'
     rulesVersion = '1.0.1'
@@ -136,8 +137,8 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     testImplementation "org.mockito:mockito-all:$mockitoVersion"
     testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
-    testImplementation "org.powermock:powermock-module-junit4:$powerMockito"
-    testImplementation "org.powermock:powermock-api-mockito:$powerMockito"
+    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
+    testImplementation "org.powermock:powermock-api-mockito:$powerMockVersion"
 
     // Required for instrumented tests
     androidTestImplementation "com.android.support:support-annotations:$supportAnnotations"
