--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,7 +136,7 @@ dependencies {
 //    implementation 'com.google.dagger:dagger-android:2.14.1'
 //    annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
 //    implementation 'com.google.dagger:dagger-android-support:2.14.1'
-//    provided 'javax.annotation:jsr250-api:1.0'
+    provided 'javax.annotation:jsr250-api:1.0'
 
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version" // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$rxjava2RxandroidVersion" // RxAndroid providing Android Scheduler
