--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,6 +163,11 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
     implementation "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
 
+//    debugImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
+//    debugImplementation ("com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"){
+//        exclude module: 'support-annotations'
+//    }
+
     // UI testing with UI Automator
 //    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
