--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,7 @@ dependencies {
     // Dagger
     implementation 'com.google.dagger:dagger:2.14.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
 
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version" // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$rxjava2RxandroidVersion" // RxAndroid providing Android Scheduler
