--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
         maven {
             url 'https://maven.google.com'
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-alpha05'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
         classpath 'io.realm:realm-gradle-plugin:4.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
